--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@hookform/resolvers": "^3.9.0",
         "@prisma/client": "^5.18.0",
+        "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
@@ -41,6 +42,7 @@
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
         "@radix-ui/react-tooltip": "^1.1.2",
         "@react-email/components": "0.0.22",
         "@react-email/render": "0.0.17",
@@ -50,6 +52,7 @@
         "@tiptap/pm": "^2.6.4",
         "@tiptap/react": "^2.6.4",
         "@tiptap/starter-kit": "^2.6.4",
+        "@uploadthing/react": "^5.7.0",
         "axios": "^1.7.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -74,6 +77,8 @@
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.2",
         "typescript": "^5",
+        "uploadthing": "^5.7.4",
+        "uuid": "^9.0.1",
         "zod": "^3.23.8",
         "zustand": "^4.4.6"
     },
@@ -82,6 +87,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/uuid": "^9.0.7",
         "husky": "^9.0.11",
         "prettier": "3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
